kubernetes/apps/flux-system/flux-operator/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: flux-web
  namespace: flux-system
spec:
  hostnames:
    - "flux.${SECRET_DOMAIN}"
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: flux-operator
          port: 9080
      matches:
        - path:
            type: PathPrefix
            value: /
